scss/style.scss
/* ... */
td._class_feature.subclasssubfeature strong {
	margin: 0.2em;
	display: inline;
	border-bottom: 0;
	color: #337ab7;
	font-family: serif;
	font-weight: 500;
	font-size: 1.3em;
}

td._class_feature.subclasssubfeature.sub2 span.inline-header {
	color: #337ab7;
	font-family: serif;
	font-weight: bold;
	font-style: italic;
}

td._class_feature.subfeature strong {
	margin: 0.2em;
	display: inline;
	border-bottom: 0;
	font-family: serif;
	font-weight: 500;
	font-size: 1.3em;
}

td._class_feature.subfeature.sub2 span.inline-header {
	color: #922610;
	font-family: serif;
	font-weight: bold;
	font-style: italic;
}

td._class_feature.optionalsubfeature strong {
	margin: 0.2em;
	display: inline;
	border-bottom: 0;
	color: #c1437e;
	font-family: serif;
	font-weight: 500;
	font-size: 1.3em;
}

td._class_feature.optionalsubfeature.sub2 span.inline-header {
	color: #c1437e;
	font-family: serif;
	font-weight: bold;
	font-style: italic;
}

table.stats td._class_feature table {
	margin: 0 0.9em 10px;
	width: calc(100% - 1.8em);
}

td span.prerequisite {
	font-style: italic;
	display: block;
}

table.stats td._class_feature.feature table {
	margin: 0 1.2em;
	width: calc(100% - 2.4em);
}

table.stats td._class_feature p.spellabilitysubtext {
	text-align: center;
}

table.stats td._class_feature p.spellabilitysubtext span {
	font-weight: bold;
}

/* end section: class features */

#classtable {
	overflow-x: auto;
}

#classtable table {
	font-size: 0.8em;
	width: 100%;
}

aside#listcontainer {
	margin-right: 1em;
	padding: 0 1em 1em 0;
	float: left;
}

#rulescontent caption {
	font-weight: bold;
	font-size: 1.2em;
	display: block;
}

#rulescontent table {
	font-size: 0.9em;
	width: 100%;
	min-width: 250px;
	display: block;
	margin: 0.2em;
}

#rulescontent table thead tr td {
	font-style: italic;
}

#rulescontent table td {
	padding: 0.2em 0.5em;
}

#classtable table .level {
	text-align: center;
	width: 1.5em;
}

#classtable table .pb {
	text-align: center;
	width: 1.5em;
	padding: 1px 0.5em;
}

#classtable .slots {
	display: none;
	text-align: center;
	max-width: 4em;
}

td.features {
	max-width: 100%;
	white-space: pre-wrap;
}

.list.classes {
	overflow-y: initial;
}

#classtable .centred-col {
	text-align: center;
	min-width: 1em;
	max-width: 3.2em;
}

div#subclasses {
	padding: 0 1em 0.5em;
	text-align: center;
}

div#subclasses > span.divider {
	margin: 0;
	padding: 0;
	width: 1em;
	display: inline-block;
	cursor: default;
	border-radius: 0;
}

div#subclasses > span {
	display: inline-block;
	font-size: 0.8em;
	margin: 0.2em;
	padding: 0.5em;
	border-radius: 0.5em;
	cursor: pointer;
	user-select: none;
}

span.pnl-link.active,
div#subclasses span.active {
	background: #337ab7;
	color: white;
}

span.pnl-link.active.spicy-sauce,
div#subclasses span.active.spicy-sauce {
	background: #1d965d;
}

span.pnl-link.active.refreshing-brew,
div#subclasses span.active.refreshing-brew {
	background: #8c3b96;
}

span.pnl-link.cf-active,
div#subclasses span.cf-active,
div#subclasses span.fluff-active {
	background: #922610;
	color: white;
}

div#subclasses span[data-state='1'] {
	background: repeating-linear-gradient(45deg, #1d965d, #1d965d 17px, lightgrey 17px, lightgrey 34px);
}

div#subclasses span[data-state='2'] {
	background: #1d965d;
	color: white;
}

#classtable .colGroupTitle {
	text-align: center;
}

#classtable .colGroupTitle::after {
	position: relative;
	bottom: 0;
	left: 0;
	margin: 0 auto;
	padding: 0;
	display: block;
	content: '';
	height: 1px;
	width: 96%;
	border-bottom: 1px solid black;
}

.featurebuffer {
	width: auto;
}

img.token {
	position: absolute;
	z-index: 10;
	top: 0;
	right: 0.1em;
	float: right;
	width: auto;
	max-width: 5em;
	height: auto;
}

img.token:hover {
	max-width: 100%;
	right: 0;
}

.classes table.stats {
	font-family: inherit;
}

#classtable tr th {
	padding: 1px 0.2em;
}

tr.trait td {
	padding-bottom: 0.7em !important;
}

table.stats #ability,
table.stats #size,
table.stats #speed {
	font-weight: bold;
}

table.stats #ability span,
table.stats #size span,
table.stats #speed span {
	font-weight: normal !important;
}

.monster-disclaimer {
	text-align: center;
	font-size: 0.67em;
}

table.stats.monster span#speed {
	font-weight: normal !important;
}

table.stats tr.trait td p:first-of-type {
	display: inline;
}

table.stats p.subtrait {
	padding: 0 1em;
	font-size: 0.9em;
}

.text-align-center {
	text-align: center;
}

.text-align-right {
	text-align: right;
}

.no-wrap {
	white-space: nowrap;
}

/* spells page */
.school_A {
	color: #00b921;
}

.school_V {
	color: #bb0100;
}

.school_E {
	color: #b30083;
}

.school_I {
	color: #006dbd;
}

.school_D {
	color: #00adb3;
}

.school_N {
	color: #6c00cc;
}

.school_T {
	color: #ccbe00;
}

.school_C {
	color: #bd0044;
}

/* Spellbook */
tr.spellbook-level > td {
	column-count: 6;
	column-gap: 7px;

	@media (max-width: 2160px) {
		column-count: 5;
	}

	@media (max-width: 1800px) {
		column-count: 4;
	}

	@media (max-width: 1440px) {
		column-count: 3;
	}

	@media (max-width: 1080px) {
		column-count: 2;
	}

	@media only screen and (max-width: 720px) {
		column-count: 1;
	}
}

table.stats.stats-book table.spellbook-entry {
	margin: 0;
	border-radius: 0.2em;
	display: inline-block;
	width: 100%;
	border: #ccc 1px solid;
}

/****************************************
 * Print styles
 ***************************************/

@media print {
	@page {
		margin: 10mm 20mm;
	}

	@page :left {
		margin: 10mm 25mm 10mm 15mm;
	}

	@page :right {
		margin: 10mm 15mm 10mm 25mm;
	}

	.divider,
	nav,
	hr,
	#listcontainer,
	#subclasses,
	#itemcontainer,
	#monstercontainer {
		display: none;
	}

	table {
		width: 100%;
		margin-bottom: 5mm;
	}

	th.border {
		height: auto;
		border: 0;
		border-bottom: 0.25pt solid black;
	}

	strong,
	.name {
		font-weight: 600;
	}

	header {
		visibility: visible;
	}

	#classtable table tr:nth-child(odd) td {
		background: lightgrey !important;
	}
}
/* ... */

